// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-document-version-by-id should get document version by ID 1`] = `
{
  "content": [
    {
      "text": "{"document":{"id":"00000000-0000-0000-0000-000000000000"},"documentType":{"id":"00000000-0000-0000-0000-000000000000","icon":"icon-home color-blue","collection":null},"id":"00000000-0000-0000-0000-000000000000","values":[],"variants":[{"state":"Published","publishDate":"NORMALIZED_DATE","scheduledPublishDate":null,"scheduledUnpublishDate":null,"createDate":"NORMALIZED_DATE","updateDate":"NORMALIZED_DATE","culture":null,"segment":null,"name":"_Test Document for Version By ID"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-document-version-by-id should handle non-existent version ID 1`] = `
{
  "content": [
    {
      "text": "Error using get-document-version-by-id:
{
  "message": "Request failed with status code 404",
  "response": ""
}",
      "type": "text",
    },
  ],
}
`;
